src/objects/LongDistanceRide__c.object
<CustomObject>
    <fields>
        <fullName>chk_RoundTrip__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Round Trip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dtm_ArrivalTime__c</fullName>
        <label>Arrival Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dtm_DepartureTime__c</fullName>
        <label>Departure Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dtm_ReturnArrival__c</fullName>
        <label>Return Arrival</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dtm_ReturnDeparture__c</fullName>
        <label>Return Departure</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>lkp_LocationFrom__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Location From</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This is not a Location.</errorMessage>
            <filterItems>
                <field>CompensationRate__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CompensationRate__c</referenceTo>
        <relationshipLabel>Long Distance Rides</relationshipLabel>
        <relationshipName>Long_Distance_Rides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lkp_LocationTo__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Location To</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This is not a Location.</errorMessage>
            <filterItems>
                <field>CompensationRate__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CompensationRate__c</referenceTo>
        <relationshipLabel>Long Distance Rides (Location To)</relationshipLabel>
        <relationshipName>Long_Distance_Rides1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lkp_ReturnTrip__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DEPRECATED</label>
        <referenceTo>LongDistanceRide__c</referenceTo>
        <relationshipLabel>Long Distance Rides</relationshipLabel>
        <relationshipName>LongDistanceRides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mdr_RentalVehicle__c</fullName>
        <label>Rental Vehicle</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This is not a Rental Vehicle expense.</errorMessage>
            <filterItems>
                <field>Expense__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Rental Vehicle</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Expense__c</referenceTo>
        <relationshipLabel>Long Distance Rides</relationshipLabel>
        <relationshipName>Long_Distance_Rides</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>txt_From__c</fullName>
        <label>From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_To__c</fullName>
        <label>To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Long Distance Ride</label>
    <nameField>
        <displayFormat>LDR-{0000}</displayFormat>
        <label>Long Distance Ride #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Long Distance Rides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>